--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -289,8 +289,7 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .con-m { margin-top: 128px; }
 
-/* ========================================================== */
-/* text_heading List css s ================================== */
+/* text_heading List */
 .heading_1 { font-size: 48px; font-weight: 700; }
 
 .heading_2 { font-size: 32px; font-weight: 700; }
@@ -303,10 +302,7 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .heading_6 { font-size: 12px; font-weight: 400; margin-bottom: 0; }
 
-/* text_heading List css e ================================== */
-/* ---------------------------------------------------------- */
-/* ========================================================== */
-/* color_palette css s ====================================== */
+/* color_palette */
 .prime_color { background-color: #503AE7; }
 
 .sub_color { background-color: #1AD993; }
@@ -321,10 +317,7 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .color_5 { background-color: #F4F2FF; }
 
-/* color_palette css e ====================================== */
-/* ---------------------------------------------------------- */
-/* ========================================================== */
-/* components - btn List css s ============================== */
+/* btn List */
 .btn_typ_01 { display: inline-block; padding: 12px 32px; cursor: pointer; }
 
 .btn_typ_01:hover { transition: .5s; }
@@ -346,22 +339,17 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .btn_3:hover { border: 2px solid #AFB0B9; color: #AFB0B9; }
 
-.btn_listen, .btn_read { height: 100%; }
-
 .btn_listen:hover, .btn_read:hover { color: #3E2DB2; transition: .5s; }
 
 .btn_listen:hover .play, .btn_read:hover .play { background-color: #3E2DB2; transition: .5s; }
 
 .btn_listen i.play, .btn_read i.play { background: url(../../assets/images/ico/ico_play.png) no-repeat center; width: 32px; height: 32px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; margin-right: 8px; }
 
-/* components - btn List css e ============================== */
-/* ---------------------------------------------------------- */
 .cate_pot { display: inline-block; padding: 12px 32px; border: 1px solid #AFB0B9; border-radius: 28.5px; font-weight: 700; color: #AFB0B9; }
 
 .cate_pot.on { border: 1px solid #503AE7; background-color: #503AE7; color: #fff; }
 
-/* ========================================================== */
-/* sns List css s =========================================== */
+/* sns List */
 .facebook_b { background: url(../../assets/images/ico/ico_facebook.svg) no-repeat center; width: 24px; height: 24px; display: inline-block; }
 
 .linkedIn_b { background: url(../../assets/images/ico/ico_linkedIn.svg) no-repeat center; width: 24px; height: 24px; display: inline-block; }
@@ -374,10 +362,7 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .instagram_s { background: url(../../assets/images/ico/ico_instagram.svg) no-repeat center/100%; width: 16px; height: 16px; display: inline-block; }
 
-/* sns List css e =========================================== */
-/* ---------------------------------------------------------- */
-/* ========================================================== */
-/* layout_your_inbox css s ================================== */
+/* layout_your_inbox */
 .inbox_wrap { position: relative; display: flex; justify-content: center; align-items: center; padding: 90px 0; text-align: center; color: #fff; background-color: #503AE7; z-index: 1; }
 
 .inbox_wrap::after { content: ''; display: block; width: 100%; height: 100%; background: url(../../assets/images/contents/bg_vector.png) no-repeat bottom; position: absolute; left: 0; top: 0; opacity: 0.1; z-index: -1; }
@@ -392,20 +377,11 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .inbox_wrap .email_send::after { background: url(../../assets/images/ico/mic_1.png) no-repeat; right: 10%; top: 50%; }
 
-/* layout_your_inbox css e =================================== */
-/* ---------------------------------------------------------- */
-/* ========================================================== */
-/* layout_banner css s ===================================== */
-/* layout_banner css e ====================================== */
-/* ---------------------------------------------------------- */
-/* ========================================================== */
-/* promotion only css s ===================================== */
+/* promotion only css */
 .promo_only { color: #fff; margin: 30px 0; padding: 20px; }
 
 .promo_only > p { margin-top: 20px; }
 
-/* promotion only css e ===================================== */
-/* ---------------------------------------------------------- */
 /* tablet 지정 */
 @media only screen and (max-width: 768px) { .heading_1 { font-size: 28px; }
   .heading_2 { font-size: 24px; }
@@ -455,15 +431,72 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .layout_banner_wrap > div > p:nth-child(2) { line-height: 28px; }
 
+/* page_host */
 .page_host .layout_banner_wrap { background: url(../../assets/images/contents/host_banner.png) no-repeat center; }
 
+/* page_padcast */
 .page_padcast .layout_banner_wrap { background: url(../../assets/images/contents/potcast_banner_2.png) no-repeat center; }
+
+/* page_blog */
+.page_blog .top_img_wrap { order: 2; }
+
+.page_blog .typ_sec_01 { padding: 64px 124px 62px 0; }
+
+.page_blog .typ_sec_01 .btn_read::after { content: ''; display: inline-block; width: 23px; height: 12px; background: url(../../assets/images/ico/ico_next_02.png) no-repeat center; padding: 0 10px; }
+
+/* page_s_podcast  */
+.page_s_podcast .typ_sec_01 { padding: 42px 0 46px 73px; }
+
+/* top_sec영역  */
+.top_sec_wrap { display: flex; justify-content: space-around; }
+
+.top_sec_wrap .top_img_wrap { position: relative; width: 50%; }
+
+.top_sec_wrap .top_img_wrap > img { width: 100%; }
+
+/* top section 공통 텍스트 */
+.typ_sec h2 { color: #503AE7; letter-spacing: 3px; font-weight: 600; }
+
+.typ_sec .top_sub_01 { line-height: 38px; }
+
+.typ_sec .top_sub_txt_02 { line-height: 24px; }
+
+/* typ_sec_01 */
+.typ_sec_01 { padding: 64px 80px 62px 0; width: 50%; }
+
+.typ_sec_01 .top_sub_01 { margin-top: 16px; }
+
+.typ_sec_01 .top_sub_txt_02 { margin-top: 15px; }
+
+.typ_sec_01 > a { margin-top: 22px; }
+
+/* typ_sec_02 */
+.typ_sec_02 { padding: 50px 79px; }
+
+.typ_sec_02 .top_sub_01 { margin-top: 32px; }
+
+.typ_sec_02 .top_sub_txt_02 { margin-top: 32px; }
+
+.typ_sec_02 > a { margin-top: 32px; }
 
 /* tablet 지정 */
 @media only screen and (max-width: 768px) { .layout_banner_wrap { background-size: cover; }
   .layout_banner_wrap > div { left: 8%; top: 50%; width: 70%; }
   .layout_banner_wrap > div > p { margin-bottom: 12px; }
-  .layout_banner_wrap > div > p:nth-child(2) { line-height: 18px; } }
+  .layout_banner_wrap > div > p:nth-child(2) { line-height: 18px; }
+  /* page_blog */
+  .page_blog .typ_sec_01 { padding: 20px 0 0 0; }
+  /* page_s_podcast */
+  .page_s_podcast .typ_sec_01 { padding: 20px 0 0 0; }
+  /* top_sec영역  */
+  .top_sec_wrap { display: block; }
+  .top_sec_wrap .top_img_wrap { width: 100%; }
+  /* typ_sec_01 */
+  .typ_sec_01 { width: 100%; }
+  /* top section 공통 텍스트 */
+  .typ_sec .top_sub_01 { line-height: 28px; }
+  .typ_sec .top_sub_txt_02 { margin-top: 10px; line-height: 27px; }
+  .typ_sec > a { margin-top: 22px; } }
 
 /* tablet */
 /* mobile 지정 */
@@ -667,9 +700,9 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 
 .list_typ_01 .typ_list_wrap ul li .typ_list_img { width: 100%; height: 256px; }
 
-.list_typ_01 .typ_list_wrap ul li .typ_sub_wrap a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
+a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
 
-.list_typ_01 .typ_list_wrap ul li .typ_sub_wrap a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat center/14px; width: 40px; height: 40px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; }
+a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat center/14px; width: 40px; height: 40px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; }
 
 /* list_type_02 */
 .list_typ_02 .typ_list_wrap ul li a { display: block; }
@@ -701,12 +734,89 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 /* ---------------------------------------------------------- */
 /* ========================================================== */
 /*                                                            */
-/* file		: _thumbnail                                      	  */
+/* file		: _promotion                                      	  */
 /*                                                            */
 /* ========================================================== */
 /* ---------------------------------------------------------- */
-/* _thumbnail s ============================================== */
-/* _thumbnail e ============================================== */
+/* _promotion s ============================================== */
+.promotion { color: var(--fontColor); }
+
+.promotion .promo_tit { overflow: hidden; height: 117px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+
+.promotion .promo_tit h1 { float: left; font-weight: 700; }
+
+.promotion .promo_con h3 { margin-top: 96px; font-size: 24px; font-weight: 600; }
+
+.promotion .promo_con .typo_box { overflow: hidden; width: 100%; background-color: #F4F2FF; margin-top: 48px; text-align: center; padding: 80px; display: flex; justify-content: space-around; flex-wrap: wrap; }
+
+.promotion .promo_con .typo_box .download { font-size: 32px; font-weight: 700; }
+
+.promotion .promo_con .typo_box .download a span.ico { background: url(../../assets/images/ico/ico_down.png) no-repeat center; width: 51px; height: 51px; border-radius: 50%; display: inline-block; background-color: #503AE7; vertical-align: bottom; }
+
+.promotion .promo_con .typo_box .download a p { display: inline-block; margin-left: 24px; line-height: 51px; }
+
+.promotion .promo_con .typo_box .font { font-weight: 600; font-size: 24px; }
+
+.promotion .promo_con .typo_box .font .ico { display: inline-block; background: url(../../assets/images/ico/ico_folder.png) no-repeat center/100%; width: 68px; height: 54px; }
+
+.promotion .promo_con .typo_box .font p { display: inline-block; vertical-align: bottom; line-height: 58px; margin-left: 22px; }
+
+.text_heading { margin-top: 96px; }
+
+.text_heading .tehead_wrap { overflow: hidden; }
+
+.text_heading .tehead_wrap .heading { float: left; width: 30%; }
+
+.text_heading .tehead_wrap .heading p { margin-bottom: 38px; }
+
+.text_heading .tehead_wrap .body_text { width: 70%; line-height: 150%; }
+
+.color_palette h3 { font-size: 30px; font-weight: 600; }
+
+.color_palette ul { overflow: hidden; text-align: center; margin-top: 48px; }
+
+.color_palette ul li { float: left; width: 128px; height: 96px; line-height: 96px; }
+
+.components .btn_com_list, .components .btn_hover_list, .components .category_potcasts { margin-top: 48px; }
+
+.components .btn_com_list a, .components .btn_hover_list a, .components .category_potcasts a { display: inline-block; margin-right: 48px; }
+
+.components .btn_com_list a:last-child, .components .btn_hover_list a:last-child, .components .category_potcasts a:last-child { margin-right: 0; }
+
+.components .btn_hover_list .btn_1 { background-color: #3E2DB2; transition: .5s; }
+
+.components .btn_hover_list .btn_2 { border: 2px solid #1AD993; color: #1AD993; }
+
+.components .btn_hover_list .btn_listen { color: #503AE7; }
+
+.components .btn_hover_list .btn_listen i { background-color: #503AE7; }
+
+.components .btn_hover_list .btn_read { color: #503AE7; }
+
+.potcasts { overflow: hidden; margin-top: 64px; display: flex; flex-wrap: wrap; }
+
+.potcasts .potcasts_list { width: 50%; }
+
+.potcasts .potcasts_list li { float: left; margin-right: 60px; }
+
+.potcasts .sns_list { border: 1px dashed #503AE7; padding: 20px 20px; }
+
+.potcasts .sns_list li { float: left; margin-right: 24px; }
+
+@media only screen and (max-width: 768px) { .promo_tit { padding: 0 30px; }
+  .promo_con { padding: 0 20px; }
+  .promo_con .typo_box { padding: 30px; }
+  .promo_con .text_heading .heading { width: inherit; }
+  .promo_con .text_heading .body_text { width: inherit; }
+  .promo_con .potcasts { flex-direction: column; }
+  .promo_con .potcasts .potcasts_list li { margin-bottom: 30px; }
+  .promo_con .potcasts .sns_list { margin-top: 20px; width: inherit; height: 100%; } }
+
+@media only screen and (max-width: 425px) { .promo_con .text_heading .heading { width: 100%; }
+  .promo_con .components .btn_com_list, .promo_con .components .btn_hover_list, .promo_con .components .category_potcasts { float: inherit; }
+  .promo_con .components .btn_com_list a, .promo_con .components .btn_hover_list a, .promo_con .components .category_potcasts a { float: none; } }
+
+/* _promotion e ============================================== */
 /* ---------------------------------------------------------- */
 
 /*# sourceMappingURL=../css/display.css.map */
