--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -8,112 +8,6 @@
 .blind { position: absolute; width: 1px; height: 1px; overflow: hidden; clip: rect(0, 0, 0, 0); margin: -1px; }
 
 /* ========================================================== */
-/* promotion                                                  */
-/* ========================================================== */
-.promotion { color: var(--fontColor); }
-
-.promotion .promo_tit { overflow: hidden; height: 117px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
-
-.promotion .promo_tit h1 { float: left; font-weight: 700; }
-
-.promotion .promo_con h3 { margin-top: 96px; font-size: 24px; font-weight: 600; }
-
-.promotion .promo_con .typo_box { overflow: hidden; width: 100%; background-color: #F4F2FF; margin-top: 48px; text-align: center; padding: 80px; display: flex; justify-content: space-around; flex-wrap: wrap; }
-
-.promotion .promo_con .typo_box .download { font-size: 32px; font-weight: 700; }
-
-.promotion .promo_con .typo_box .download a span.ico { background: url(../../assets/images/ico/ico_down.png) no-repeat center; width: 51px; height: 51px; border-radius: 50%; display: inline-block; background-color: #503AE7; vertical-align: bottom; }
-
-.promotion .promo_con .typo_box .download a p { display: inline-block; margin-left: 24px; line-height: 51px; }
-
-.promotion .promo_con .typo_box .font { font-weight: 600; font-size: 24px; }
-
-.promotion .promo_con .typo_box .font .ico { display: inline-block; background: url(../../assets/images/ico/ico_folder.png) no-repeat center/100%; width: 68px; height: 54px; }
-
-.promotion .promo_con .typo_box .font p { display: inline-block; vertical-align: bottom; line-height: 58px; margin-left: 22px; }
-
-.text_heading { margin-top: 96px; }
-
-.text_heading .tehead_wrap { overflow: hidden; }
-
-.text_heading .tehead_wrap .heading { float: left; width: 30%; }
-
-.text_heading .tehead_wrap .heading p { margin-bottom: 38px; }
-
-.text_heading .tehead_wrap .body_text { width: 70%; line-height: 150%; }
-
-.color_palette h3 { font-size: 30px; font-weight: 600; }
-
-.color_palette ul { overflow: hidden; text-align: center; margin-top: 48px; }
-
-.color_palette ul li { float: left; width: 128px; height: 96px; line-height: 96px; }
-
-.components .btn_com_list, .components .btn_hover_list, .components .category_potcasts { margin-top: 48px; }
-
-.components .btn_com_list a, .components .btn_hover_list a, .components .category_potcasts a { display: inline-block; margin-right: 48px; }
-
-.components .btn_com_list a:last-child, .components .btn_hover_list a:last-child, .components .category_potcasts a:last-child { margin-right: 0; }
-
-.components .btn_hover_list .btn_1 { background-color: #3E2DB2; transition: .5s; }
-
-.components .btn_hover_list .btn_2 { border: 2px solid #1AD993; color: #1AD993; }
-
-.components .btn_hover_list .btn_listen { color: #503AE7; }
-
-.components .btn_hover_list .btn_listen i { background-color: #503AE7; }
-
-.components .btn_hover_list .btn_read { color: #503AE7; }
-
-.potcasts { overflow: hidden; margin-top: 64px; display: flex; flex-wrap: wrap; }
-
-.potcasts .potcasts_list { width: 50%; }
-
-.potcasts .potcasts_list li { float: left; margin-right: 60px; }
-
-.potcasts .sns_list { border: 1px dashed #503AE7; padding: 20px 20px; }
-
-.potcasts .sns_list li { float: left; margin-right: 24px; }
-
-@media only screen and (max-width: 768px) { .promo_tit { padding: 0 30px; }
-  .promo_con { padding: 0 20px; }
-  .promo_con .typo_box { padding: 30px; }
-  .promo_con .text_heading .heading { width: inherit; }
-  .promo_con .text_heading .body_text { width: inherit; }
-  .promo_con .potcasts { flex-direction: column; }
-  .promo_con .potcasts .potcasts_list li { margin-bottom: 30px; }
-  .promo_con .potcasts .sns_list { margin-top: 20px; width: inherit; height: 100%; } }
-
-@media only screen and (max-width: 425px) { .promo_con .text_heading .heading { width: 100%; }
-  .promo_con .components .btn_com_list, .promo_con .components .btn_hover_list, .promo_con .components .category_potcasts { float: inherit; }
-  .promo_con .components .btn_com_list a, .promo_con .components .btn_hover_list a, .promo_con .components .category_potcasts a { float: none; } }
-
-/* promotion e =================================================== */
-/* ========================================================== */
-/* recent episode s                                            */
-/* ========================================================== */
-.recent_episodes { color: var(--fontColor); }
-
-.recent_episodes .recent_video ul { overflow: hidden; }
-
-.recent_episodes .recent_video ul li { position: relative; float: left; width: calc((100% - 36px ) / 3); margin: 64px 16px 0 0; }
-
-.recent_episodes .recent_video ul li iframe { width: 100%; height: 256px; }
-
-.recent_episodes .recent_video ul li .recent_video_text h3 { margin-top: 32px; display: block; }
-
-.recent_episodes .recent_video ul li .recent_video_text p, .recent_episodes .recent_video ul li .recent_video_text a.btn_listen { margin-top: 16px; }
-
-.recent_episodes .recent_video ul li .recent_video_text a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
-
-.recent_episodes .recent_video ul li .recent_video_text a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat center/14px; width: 40px; height: 40px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; }
-
-.recent_episodes .recent_video ul li:last-child { margin-right: 0; }
-
-@media only screen and (max-width: 768px) { .recent_episodes .recent_video ul { margin: 40px 0 0 0; }
-  .recent_episodes .recent_video ul li { width: 100%; margin: 0 0 30px 0; } }
-
-/* recent episode e ========================================= */
-/* ========================================================== */
 /* host s                                                     */
 /* ========================================================== */
 .host_top { max-width: 1069px; margin: 0 auto; width: 100%; overflow: hidden; margin-top: 78px; position: relative; }
@@ -122,15 +16,7 @@
 
 .host_top .host_tit_wrap { position: absolute; left: 51%; top: 0; }
 
-.host_top .host_tit_wrap .host_tit { padding: 50px 79px; background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 21px; }
-
-.host_top .host_tit_wrap .host_tit h2 { color: #503AE7; letter-spacing: 3px; font-weight: 600; }
-
-.host_top .host_tit_wrap .host_tit .host_tit_sub { margin-top: 32px; line-height: 38.4px; }
-
-.host_top .host_tit_wrap .host_tit .host_sub { margin-top: 32px; line-height: 24px; }
-
-.host_top .host_tit_wrap .host_tit a { margin-top: 6.5%; width: 151px; }
+.page_host .typ_sec_02 { background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 21px; }
 
 .host_wrap { color: var(--fontColor); }
 
@@ -183,7 +69,7 @@
   100% { top: 111px; } }
 
 @media only screen and (max-width: 768px) { .host_top .host_top_img { background: url(../../assets/images/contents/main_host.png) no-repeat left/60%; }
-  .host_top .host_tit_wrap .host_tit { padding: 50px 20px; }
+  .page_host .host_tit_wrap .typ_sec_02 { padding: 50px 20px; }
   .origins_wrap { padding: 0 20px; }
   .origins_wrap .ori_con { flex-wrap: wrap; }
   .origins_wrap .ori_con .origins_txt, .origins_wrap .ori_con .journalist_txt { width: 100% !important; }
