--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -44,9 +44,7 @@ body {
   margin-top: $margin-t;
 }
 
-/* ========================================================== */
-/* text_heading List css s ================================== */
-
+/* text_heading List */
 .heading_1 {
   font-size: 48px;
   font-weight: $b;
@@ -72,14 +70,8 @@ body {
   font-weight: $r;
   margin-bottom: 0;
 }
-/* text_heading List css e ================================== */
-/* ---------------------------------------------------------- */
 
-
-
-
-/* ========================================================== */
-/* color_palette css s ====================================== */
+/* color_palette */
 .prime_color {
   background-color: $prime_color;
 }
@@ -102,14 +94,9 @@ body {
 .color_5 {
   background-color: $color_5;
 }
-/* color_palette css e ====================================== */
-/* ---------------------------------------------------------- */
 
 
-
-/* ========================================================== */
-/* components - btn List css s ============================== */
-
+/* btn List */
 //btn_type _ 공통
 .btn_typ_01{
   display: inline-block;
@@ -158,7 +145,6 @@ body {
 
 .btn_listen,
 .btn_read {
-  height: 100%;
   &:hover {
     color: #3E2DB2;
     transition: .5s;
@@ -180,10 +166,6 @@ body {
 }
 
 
-/* components - btn List css e ============================== */
-/* ---------------------------------------------------------- */
-
-
 // category potcasts - potcasts list
 .cate_pot {
   display: inline-block;
@@ -199,8 +181,7 @@ body {
   }
 }
 
-/* ========================================================== */
-/* sns List css s =========================================== */
+/* sns List */
 .facebook_b {
   background: url(../../assets/images/ico/ico_facebook.svg) no-repeat center;
   width: 24px;
@@ -238,14 +219,10 @@ body {
   height: 16px;
   display: inline-block;
 }
-/* sns List css e =========================================== */
-/* ---------------------------------------------------------- */
 
 
 
-
-/* ========================================================== */
-/* layout_your_inbox css s ================================== */
+/* layout_your_inbox */
 .inbox_wrap{
   position: relative;
   display: flex;
@@ -293,22 +270,8 @@ body {
     }
   }
 }
-/* layout_your_inbox css e =================================== */
-/* ---------------------------------------------------------- */
 
-
-
-/* ========================================================== */
-/* layout_banner css s ===================================== */
-
-
-/* layout_banner css e ====================================== */
-/* ---------------------------------------------------------- */
-
-
-
-/* ========================================================== */
-/* promotion only css s ===================================== */
+/* promotion only css */
 .promo_only{
   color: #fff;
   margin: 30px 0;
@@ -317,8 +280,6 @@ body {
     margin-top: 20px;
   }
 }
-/* promotion only css e ===================================== */
-/* ---------------------------------------------------------- */
 
 
 
