--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -17,307 +17,6 @@
   margin: -1px;
 }
 
-/* ========================================================== */
-/* promotion                                                  */
-/* ========================================================== */
-
-// promotion
-.promotion {
-  color: var(--fontColor);
-    .promo_tit {
-        overflow: hidden;
-        height: 117px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid rgba(0,0,0,.2);
-        h1 {
-            float: left;
-            font-weight: $b;
-        }
-    }
-    .promo_con {
-        h3 {
-            margin-top: 96px;
-            font-size: 24px;
-            font-weight: $sb;
-        }
-        .typo_box {
-            overflow: hidden;
-            width: 100%;
-            background-color: #F4F2FF;
-            margin-top: 48px;
-            text-align: center;
-            padding: 80px;
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            .download {
-                font-size: 32px;
-                font-weight: $b;
-                a {
-                    span.ico {
-                        background: url(../../assets/images/ico/ico_down.png) no-repeat center;
-                        width: 51px;
-                        height: 51px;
-                        border-radius: 50%;
-                        display: inline-block;
-                        background-color: #503AE7;
-                        vertical-align: bottom;
-                    }
-                    p {
-                        display: inline-block;
-                        margin-left: 24px;
-                        line-height: 51px;
-                    }
-                }
-            }
-            .font {
-                font-weight: $sb;
-                font-size: 24px;
-                .ico {
-                    display: inline-block;
-                    background: url(../../assets/images/ico/ico_folder.png) no-repeat center / 100%;
-                    width: 68px;
-                    height: 54px;
-                }
-                p {
-                    display: inline-block;
-                    vertical-align: bottom;
-                    line-height: 58px;
-                    margin-left: 22px;
-                }
-            }
-        }
-    }
-  }
-
-  //text_heading
-  .text_heading {
-    margin-top: 96px;
-    .tehead_wrap {
-        overflow: hidden;
-        .heading {
-            float: left;
-            width: 30%;
-            p {
-              margin-bottom: 38px;
-            }
-        }
-        .body_text {
-          width: 70%;
-          line-height: 150%;
-        }
-    }
-  }
-
-  // color_palette
-  .color_palette {
-    h3 {
-        font-size: 30px;
-        font-weight: $sb;
-    }
-    ul {
-        overflow: hidden;
-        text-align: center;
-        margin-top: 48px;
-        li {
-            float: left;
-            width: 128px;
-            height: 96px;
-            line-height: 96px;
-        }
-    }
-  }
-
-  // components
-  .components {
-    .btn_com_list,
-    .btn_hover_list,
-    .category_potcasts {
-      margin-top: 48px;
-      a {
-        display: inline-block;
-        margin-right: 48px;
-        &:last-child {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-
-  .components {
-    .btn_hover_list {
-      .btn_1 {
-        background-color: #3E2DB2;
-        transition: .5s;
-      }
-      .btn_2 {
-        border: 2px solid $sub_color;
-        color: $sub_color;
-      }
-      .btn_listen {
-        color: $prime_color;
-        i {
-          background-color: $prime_color;
-        }
-      }
-      .btn_read {
-        color: $prime_color;
-      }
-    }
-  }
-
-  //potcasts
-  .potcasts {
-    overflow: hidden;
-    margin-top: 64px;
-    display: flex;
-    flex-wrap: wrap;
-    .potcasts_list {
-      width: 50%;
-      li {
-        float: left;
-        margin-right: 60px;
-      }
-    }
-    .sns_list {
-      border: 1px dashed $prime_color;
-      padding: 20px 20px;
-      li {
-        float: left;
-        margin-right: 24px;
-      }
-      .ico_small {
-      }
-    }
-  }
-
-
-// mdq_tab
-@media only screen and (max-width: 768px) {
-  .promo_tit {
-    padding: 0 30px;
-  }
-  .promo_con {
-    padding: 0 20px;
-    .typo_box {
-      padding: 30px;
-    }
-    .text_heading {
-      .heading {
-        width: inherit;
-      }
-      .body_text {
-        width: inherit;
-      }
-    }
-    .potcasts {
-      flex-direction: column;
-      .potcasts_list {
-        li {
-          margin-bottom: 30px;
-        }
-      }
-      .sns_list {
-        margin-top: 20px;
-        width: inherit;
-        height: 100%;
-      }
-    }
-  }
-}
-// mdq_mo
-@media only screen and (max-width: 425px) {
-  .promo_con {
-    .text_heading {
-      .heading {
-        width: 100%;
-      }
-    }
-    .components {
-      .btn_com_list,
-      .btn_hover_list,
-      .category_potcasts {
-        float: inherit;
-        a {
-          float: none;
-        }
-      }
-    }
-  }
-}
-
-/* promotion e =================================================== */
-
-/* ========================================================== */
-/* recent episode s                                            */
-/* ========================================================== */
-
-.recent_episodes {
-  color: var(--fontColor);
-  .recent_video { 
-    ul {
-      overflow: hidden;
-      li {
-        position: relative;
-        float: left;
-        width: calc((100% - 36px ) / 3);
-        margin: 64px 16px 0 0;
-        iframe {
-          width: 100%;
-          height: 256px;
-        }
-        .recent_video_text {
-          h3 {
-            margin-top: 32px;
-            display: block;
-          }
-          p,
-          a.btn_listen {
-            margin-top: 16px;
-          }
-          a.mute {
-            position: absolute;
-            top: 16px;
-            right: 16px;
-            color: #fff;
-            i {
-              background: url(../../assets/images/ico/ico_vector.png) no-repeat center / 14px;
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background-color: #503AE7;
-              display: inline-block;
-              vertical-align: middle;
-            }
-          }
-        }
-        &:last-child {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-
-}
-
-// mdq_tab
-@media only screen and (max-width: 768px) {
-  .recent_episodes {
-    .recent_video {
-      ul {
-        margin: 40px 0 0 0;
-        li {
-          width: 100%;
-          margin: 0 0 30px 0;
-        }
-      }
-    }
-  }
-}
-
-/* recent episode e ========================================= */
 
 /* ========================================================== */
 /* host s                                                     */
@@ -339,29 +38,14 @@
     position: absolute;
     left: 51%;
     top: 0;
-    .host_tit {
-      padding: 50px 79px;
-      background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 21px;
-      h2 {
-        color: $prime_color;
-        letter-spacing: 3px;
-        font-weight: $sb;
-      }
-      .host_tit_sub {
-        margin-top: 32px;
-        line-height: 38.4px;
-      }
-      .host_sub {
-        margin-top: 32px;
-        line-height: 24px;
-      }
-      a {
-        margin-top: 6.5%;
-        width: 151px;
-      }
-    }
   }
 }
+.page_host{
+  .typ_sec_02{
+    background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 21px;
+  }
+}
+
 
 // mq_logo_list
 .host_wrap {
@@ -484,8 +168,10 @@
     .host_top_img {
       background: url(../../assets/images/contents/main_host.png) no-repeat left / 60%;
     }
+  }
+  .page_host{
     .host_tit_wrap {
-      .host_tit {
+      .typ_sec_02 {
         padding: 50px 20px;
       }
     }
