--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -166,8 +166,8 @@ body {
 }
 
 
-// category potcasts - potcasts list
-.cate_pot {
+// category podcasts - podcasts list
+.cate_pod {
   display: inline-block;
   padding: 12px 32px;
   border: 1px solid $color_4;
