--- a/dev/css_dev/display/_promotion.scss
+++ b/dev/css_dev/display/_promotion.scss
@@ -119,7 +119,7 @@
   .components {
     .btn_com_list,
     .btn_hover_list,
-    .category_potcasts {
+    .category_podcasts {
       margin-top: 48px;
       a {
         display: inline-block;
@@ -153,13 +153,13 @@
     }
   }
 
-  //potcasts
-  .potcasts {
+  //podcasts
+  .podcasts {
     overflow: hidden;
     margin-top: 64px;
     display: flex;
     flex-wrap: wrap;
-    .potcasts_list {
+    .podcasts_list {
       width: 50%;
       li {
         float: left;
@@ -197,9 +197,9 @@
         width: inherit;
       }
     }
-    .potcasts {
+    .podcasts {
       flex-direction: column;
-      .potcasts_list {
+      .podcasts_list {
         li {
           margin-bottom: 30px;
         }
@@ -223,7 +223,7 @@
     .components {
       .btn_com_list,
       .btn_hover_list,
-      .category_potcasts {
+      .category_podcasts {
         float: inherit;
         a {
           float: none;
