--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -41,7 +41,7 @@
 /* page_padcast */
 .page_padcast{
   .layout_banner_wrap{
-    background: url(../../assets/images/contents/potcast_banner_2.png) no-repeat center;
+    background: url(../../assets/images/contents/podcast_banner_2.png) no-repeat center;
   }
 }
 
@@ -208,6 +208,115 @@
   }
 
 }/* mobile */
+
+
+
+
+/* single blog, single_podcast 공통 container */
+.producer_post_wrap {
+  width: 49.7%;
+  h2 {
+    line-height: 38.4px;
+  }
+  .pro_po_main,
+  .pro_po_sub {
+    .pro_po_con {
+      margin-top: 20px;
+      line-height: 24px;
+    }
+    .pro_po_list {
+      margin-top: 24px;
+      ul {
+        margin-top: 24px;
+        li {
+          line-height: 36px;
+        }
+      }
+    }
+  }
+
+  // sub_only
+  .pro_po_sub {
+    margin-top: 48px;
+    h3 {
+      line-height: 30px;
+    }
+  }
+}
+
+.producer_post {
+  color: var(--fontColor);
+  .pro_po_profile {
+    border-left: 16px solid $prime_color;
+    margin-top: 64px;
+    .pro_po_profile_wrap {
+      padding: 16px 0 22px 48px;
+      display: flex;
+      align-items: center;
+      .pro_info {
+        min-width: 177px;
+        vertical-align: middle;
+        img, span {
+          display: block;
+        }
+        .name {
+          font-weight: $b;
+          font-size: 24px;
+          line-height: 36px;
+          margin-top: 16px;
+        }
+        .job {
+          line-height: 24px;
+        }
+        .sns {
+          ul {
+            overflow: hidden;
+            margin-top: 16px;
+            li {
+              float: left;
+              margin-right: 16px;
+              &:last-child {
+                margin-right: 0;
+              }
+            }
+          }
+        }
+      }
+      .pro_info_con {
+        line-height: 24px;
+        margin-left: 64px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+      }
+    }
+  }
+}
+/* tablet 지정 */
+@media only screen and (max-width: 768px) {
+
+  //producer_post
+  .producer_post {
+    flex-wrap: wrap;
+    padding: 0 20px;
+    .producer_post_wrap {
+    width: 100%;
+    .pro_po_profile {
+      margin-top: 36px;
+      .pro_po_profile_wrap {
+        padding: 17px 0 22px 25px;
+        flex-wrap: wrap;
+        .pro_info_con {
+          margin-top: 20px;
+          margin-left: 0;
+        }
+      }
+    }
+    }
+  }
+}
 
 /* container e ============================================== */
 /* ---------------------------------------------------------- */
