--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -10,13 +10,15 @@
 /* ========================================================== */
 /* host s                                                     */
 /* ========================================================== */
-.host_top { max-width: 1069px; margin: 0 auto; width: 100%; overflow: hidden; margin-top: 78px; position: relative; }
+.banner_top_01 { max-width: 1069px; margin: 0 auto; width: 100%; overflow: hidden; margin-top: 78px; position: relative; color: var(--fontColor); }
 
-.host_top .host_top_img { height: 524px; background: url(../../assets/images/contents/main_host.png) no-repeat left; }
+.banner_top_01 .banner_top_tit_wrap { position: absolute; }
 
-.host_top .host_tit_wrap { position: absolute; left: 51%; top: 0; }
+.banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec a { line-height: 24px; }
 
-.page_host .typ_sec_02 { background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 21px; }
+.page_host .banner_top_01 .banner_top_img { height: 524px; background: url(../../assets/images/contents/main_host.png) no-repeat left; }
+
+.page_host .banner_top_01 .banner_top_tit_wrap { left: 51%; top: 0; }
 
 .page_host { color: var(--fontColor); }
 
@@ -36,7 +38,7 @@
 
 .ori_con .origins_txt { margin-right: 64px; }
 
-.podcasts_n_view_wrap { position: relative; height: 560px; margin-top: 122px; }
+.podcasts_n_view_wrap { position: relative; height: 560px; }
 
 .podcasts_n_view_wrap .pod_vi ul { display: flex; }
 
@@ -68,8 +70,8 @@
 @keyframes downup { 0% { top: 0; }
   100% { top: 111px; } }
 
-@media only screen and (max-width: 768px) { .host_top .host_top_img { background: url(../../assets/images/contents/main_host.png) no-repeat left/60%; }
-  .page_host .host_tit_wrap .typ_sec_02 { padding: 50px 20px; }
+@media only screen and (max-width: 768px) { .page_host .banner_top_01 .banner_top_img { background: url(../../assets/images/contents/main_host.png) no-repeat left/60%; }
+  .page_host .banner_top_tit_wrap .typ_sec_02 { padding: 50px 20px; }
   .origins_wrap { padding: 0 20px; }
   .origins_wrap .ori_con { flex-wrap: wrap; }
   .origins_wrap .ori_con .origins_txt, .origins_wrap .ori_con .journalist_txt { width: 100% !important; }
@@ -81,8 +83,9 @@
   .podcasts_n_view_wrap .pod_vi ul li:nth-child(2) i { width: 89px !important; }
   .podcasts_n_view_wrap .pod_vi ul li:nth-child(3) i { width: 70px !important; } }
 
-@media only screen and (max-width: 425px) { .host_top .host_top_img { height: 390px; background: url(../../assets/images/contents/main_host.png) no-repeat center/100%; }
-  .host_top .host_tit_wrap { position: inherit; left: inherit; }
+@media only screen and (max-width: 425px) { .page_host .banner_top_01 .banner_top_img { height: 390px; background: url(../../assets/images/contents/main_host.png) no-repeat center/100%; }
+  .page_host .banner_top_01 .banner_top_tit_wrap { position: inherit; left: inherit; }
+  .page_host .banner_top_01 .banner_top_tit_wrap .typ_sec_02 { padding: 0 20px; }
   .podcasts_n_view_wrap { height: 280px; }
   .podcasts_n_view_wrap .pod_vi ul li { font-size: 14px; width: calc(( 100% - 15px) / 4); margin-right: 5px; }
   .podcasts_n_view_wrap .pod_vi ul li i { height: 50px; width: 50px; }
@@ -149,7 +152,17 @@
 /* ========================================================== */
 /* about s                                                    */
 /* ========================================================== */
-.our_team { background: url(../../../assets/images/lines/bg_lines_10.png) no-repeat left 33%; color: var(--fontColor); }
+.page_about .banner_top_01 { max-width: 1024px; }
+
+.page_about .banner_top_01 .banner_top_img { background: url(../../assets/images/contents/main_about.png) no-repeat right; height: 500px; }
+
+.page_about .banner_top_01 .banner_top_tit_wrap { padding: 95px 0; width: 44%; left: 0; top: 0; }
+
+.page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec { padding: 0; }
+
+.page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec p.top_sub_01 { line-height: 52.8px; }
+
+.our_team { margin-top: 86px; background: url(../../../assets/images/lines/bg_lines_10.png) no-repeat left 33%; color: var(--fontColor); }
 
 .our_team .our_t_tit_wrap { margin: 0 auto; max-width: 1024px; }
 
@@ -162,6 +175,22 @@
 .our_team .our_t_tit_wrap .our_t_txt p:last-child { margin-right: 0; }
 
 .our_team .our_t_tit_wrap .our_t_txt p span { font-weight: 700; }
+
+.meet_our_team { background: url(../../assets/images/lines/bg_lines_5.png) no-repeat right bottom 18%; color: var(--fontColor); }
+
+.meet_our_team .meet_t .meetTeamSwiper { margin-top: 49px; }
+
+.meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .name { display: block; line-height: 38.4px; margin-top: 32px; }
+
+.meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .job { color: #AFB0B9; line-height: 24px; margin-top: 16px; display: block; }
+
+.meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .socials { margin-top: 16px !important; }
+
+.meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .socials ul { margin-top: inherit; }
+
+.meet_our_team .meet_t .team-pagination { text-align: center; margin-top: 50px; }
+
+.meet_our_team .meet_t .team-pagination .swiper-pagination-bullet-active { background-color: #503AE7; }
 
 .our_sponsors { margin-top: 102px; }
 
@@ -183,14 +212,25 @@
 
 .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child span.line { width: 39px; height: 4px; line-height: 24px; background-color: #1AD993; display: block; margin-top: 8px; }
 
-@media only screen and (max-width: 768px) { .our_team .our_t_tit_wrap { padding: 0 20px; }
+@media only screen and (max-width: 768px) { .page_about .banner_top_01 .banner_top_tit_wrap { padding: 55px 20px; width: 45%; left: 0; bottom: 0; }
+  .page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec { padding: 0; }
+  .our_team .our_t_tit_wrap { padding: 0 20px; }
   .our_team .our_t_tit_wrap .our_t_txt { margin-top: 28px; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li > img { width: 80%; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child { padding: 22px; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child p { font-size: 19px; }
   .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child a.contact { margin-top: 54px; } }
 
-@media only screen and (max-width: 425px) { .our_team .our_t_tit_wrap .our_t_txt { flex-wrap: wrap; }
+@media only screen and (max-width: 425px) { .page_about .banner_top_01 .banner_top_img { background-size: 80%; background-position: center; height: 480px; }
+  .page_about .banner_top_01 .banner_top_tit_wrap { padding: 0 20px; width: 100%; position: relative; }
+  .page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec { padding: 0; }
+  .meet_our_team .meet_t .meetTeamSwiper { margin-top: 29px; }
+  .meet_our_team .meet_t .meetTeamSwiper .swiper-slide img { width: 100%; }
+  .meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt { padding: 10px 20px; }
+  .meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .name { font-size: 25px; margin-top: 10px; }
+  .meet_our_team .meet_t .meetTeamSwiper .swiper-slide .meet_t_txt .job { margin-top: 5px; }
+  .meet_our_team .meet_t .team-pagination { text-align: center; margin-top: 20px; }
+  .our_team .our_t_tit_wrap .our_t_txt { flex-wrap: wrap; }
   .our_team .our_t_tit_wrap .our_t_txt p { width: 100%; }
   .our_team .our_t_tit_wrap .our_t_txt p:last-child { margin-top: 20px; }
   .our_sponsors .our_s_tit_wrap { background-size: 50%; }
@@ -233,13 +273,13 @@
 /* ========================================================== */
 /* contact s                                                  */
 /* ========================================================== */
-.contact_us { margin-top: 64px; height: 716px; background: url(../../../assets/images/contents/bg_contact.png) no-repeat right bottom; }
+.contact_us { color: var(--fontColor); margin-top: 64px; height: calc( 100vh - 136px); background: url(../../../assets/images/contents/bg_contact.png) no-repeat right bottom; }
 
 .contact_us .contact_us_wrap { display: flex; }
 
 .contact_us .contact_us_wrap .contact_input_wrap { width: 50%; }
 
-.contact_us .contact_us_wrap .contact_input_wrap .contact_input_txt p { color: #503AE7; font-size: 20px; font-weight: 600; margin-top: 16px; }
+.contact_us .contact_us_wrap .contact_input_wrap .contact_input_txt p { color: #503AE7; font-size: 20px; font-weight: 600; margin-top: 16px; line-height: 28px; }
 
 .contact_us .contact_us_wrap .contact_input_wrap .contact_input { margin-top: 48px; }
 
@@ -251,27 +291,27 @@
 
 .contact_us .contact_us_wrap .contact_input_wrap .contact_input input[type=submit] { background-color: #503AE7; color: #F4F2FF; font-size: 18px; vertical-align: bottom; width: 162px; }
 
-.contact_us .contact_us_wrap .contact_input_wrap .contact_input textarea { padding-top: 20px; }
+.contact_us .contact_us_wrap .contact_input_wrap .contact_input textarea { padding-top: 20px; resize: none; }
 
-.contact_us .contact_us_wrap .contact_sub { margin-left: 64px; width: 50%; }
+.contact_us .contact_us_wrap .contact_sub { margin-left: 64px; }
 
-.contact_us .contact_us_wrap .contact_sub h3 { color: #808080; font-size: 20px; font-weight: 700; }
+.contact_us .contact_us_wrap .contact_sub h3 { color: #808080; color: var(--fontColor); font-size: 20px; font-weight: 700; }
 
 .contact_us .contact_us_wrap .contact_sub .subscribe .podcasts_list { margin-top: 32px; display: grid; grid-template-columns: 1fr 1fr; gap: 30px 100px; }
 
 .contact_us .contact_us_wrap .contact_sub .socials { margin-top: 64px; }
 
-.contact_us .contact_us_wrap .contact_sub .socials ul { margin-top: 32px; overflow: hidden; }
+ul.socials_list { margin-top: 32px; overflow: hidden; }
 
-.contact_us .contact_us_wrap .contact_sub .socials ul li { float: left; margin-right: 24px; }
+ul.socials_list li { float: left; margin-right: 24px; }
 
-.contact_us .contact_us_wrap .contact_sub .socials ul li .ico_facebook_p { background: url(../../assets/images/ico/ico_facebook_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; }
+ul.socials_list li .ico_facebook_p { background: url(../../assets/images/ico/ico_facebook_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; }
 
-.contact_us .contact_us_wrap .contact_sub .socials ul li .ico_twitter_p { background: url(../../assets/images/ico/ico_twitter_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; }
+ul.socials_list li .ico_twitter_p { background: url(../../assets/images/ico/ico_twitter_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; }
 
-.contact_us .contact_us_wrap .contact_sub .socials ul li .ico_linkedIn_p { background: url(../../assets/images/ico/ico_linkedIn_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; margin-right: 0; }
+ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico_linkedIn_p.png) no-repeat center; width: 20px; height: 20px; display: inline-block; margin-right: 0; }
 
-@media only screen and (max-width: 768px) { .contact_us { height: inherit; padding: 0 20px; margin-top: 64px; }
+@media only screen and (max-width: 768px) { .contact_us { padding: 0 20px; margin-top: 64px; }
   .contact_us .contact_us_wrap { flex-wrap: wrap; }
   .contact_us .contact_us_wrap .contact_input_wrap { width: 100%; }
   .contact_us .contact_us_wrap .contact_input_wrap .contact_input input:nth-child(4) { height: 128px; }
